--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
                 
          </div>
-            <input type="submit" value="Donate now" class="btn">
+            <input type="submit" value="Donate now" class="button">
            
         </form>
     </section>
@@ -143,7 +143,7 @@
                     <div class="content">
                         <h3>projects</h3>
                         <p>We have completed more than nine thousand projects and are hoping to do 
-                            even more projects in the coming years.!</p>
+                            even more projects in the coming years.</p>
                             <a href="#" class="btn">Join us</a>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                     <div class="content">
                         <h3>volunteers</h3>
                         <p>Our team consists of two thousand plus volunteers around the world.
-                            If you would like to join us give us a call.!</p>
+                            If you would like to join us give us a call.</p>
                             <a href="#" class="btn">Join us</a>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                     <div class="content">
                         <h3>finances</h3>
                         <p>Thanks to your continued support we have been able to raise six million dollars
-                            to help in our various charities.!</p>
+                            to help in our various charities.</p>
                             <a href="#" class="btn">Join us</a>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                     <div class="content">
                         <h3>donations</h3>
                         <p>We have received over six thousand donations which include food and clothes. 
-                        Feel free to join the good cause and help others.!</p>
+                        Feel free to join the good cause and help others.</p>
                         <a href="#" class="btn">Join us</a>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                     <div class="content">
                         <h3>education</h3>
                         <p>Some of the funds donated have been used to put children through school
-                            so as to give them a bright future as leaders of tommorrow.!</p>
+                            so as to give them a bright future as leaders of tommorrow.</p>
                             <a href="#" class="btn">Join us</a>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                     <div class="content">
                         <h3>environment</h3>
                         <p>As an organization we are big on saving the environment so we put in some funds
-                            for environmental conservation and tree planting.!</p>
+                            for environmental conservation and tree planting.</p>
                             <a href="#" class="btn">Join us</a>
                     </div>
                 </div>
@@ -220,6 +220,7 @@
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
                 <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fa-brands fa-google"></a>
             </div>
             <p>"I hold that a strongly marked personality can influence descendants for generations."</p>
         </div>
@@ -232,6 +233,7 @@
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
                 <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fa-brands fa-google"></a>
             </div>
             <p>"Be who you are and say what you feel, because to those who mind don't matter and those who matter don't mind."</p>
         </div>
@@ -244,6 +246,7 @@
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
                 <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fa-brands fa-google"></a>
             </div>
             <p>"One of the greatest regrets in life is being what others want you to be rather tha being yourself.”</p>
         </div>
@@ -256,6 +259,7 @@
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
                 <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fa-brands fa-google"></a>
             </div>
             <p>"What you do doe not frighten your enemies as much as what you are.”</p>
         </div>  
@@ -365,6 +369,62 @@
     <h6 class="sub-heading">recent from blog</h6>
     <h1 class="heading">our blog</h1>
 
+    <div class="box-container">
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog-post-1.jpg" alt="blog image">
+                <a href="#" class="link"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+            <div class="text">
+                <h3>Give Hope to the People Need Most</h3>
+                <p class="icons">
+                    <span><i class="fa-solid fa-user"></i>Administrator</i></span>
+                    <span><i class="fa-regular fa-calendar-days"></i>April 20, 2023</i></span>
+                    <span><i class="fa-solid fa-comment"></i>5 Comments</span>
+                </p>
+                <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                <a href="#" class="btn">Read more<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog-post-2.jpg" alt="blog image">
+                <a href="#" class="link"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+            <div class="text">
+                <h3>Give Hope to the People Need Most</h3>
+                <p class="icons">
+                    <span><i class="fa-solid fa-user"></i>Administrator</i></span>
+                    <span><i class="fa-regular fa-calendar-days"></i>April 25, 2023</i></span>
+                    <span><i class="fa-solid fa-comment"></i>5 Comments</span>
+                </p>
+                <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                <a href="#" class="btn">Read more<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog-post-3.jpg" alt="blog image">
+                <a href="#" class="link"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+            <div class="text">
+                <h3>Give Hope to the People Need Most</h3>
+                <p class="icons">
+                    <span><i class="fa-solid fa-user"></i>Administrator</i></span>
+                    <span><i class="fa-regular fa-calendar-days"></i>April 30, 2023</i></span>
+                    <span><i class="fa-solid fa-comment"></i>5 Comments</span>
+                </p>
+                <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                <a href="#" class="btn">Read more<i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+
+    </div>
+
+
    </section>
 
    <!--End of blogs section-->
@@ -407,6 +467,8 @@
 
 
 
+    <!-- scroll top button  -->
+<a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
 
 
 
